# spacerocks

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.toml  paper.md  todo.md  wishlist.md
.github/workflows/: ci.yaml
aaa-reserved-src-donotdelete/: reference_plane.rs  rockcollection.rs  spacerock.rs
aaa-reserved-src-donotdelete/observing/: detection.rs
aaa-reserved-src-donotdelete/spacerock/: statevector.rs
aaa-reserved-src-donotdelete/todo/: calc_kep_from_xyz.rs
docs/python-docs/: coordinates.md  mpc.md  observing.md  orbfit.md  origin.md  referenceplane.md  rockcollection.md  simulation.md  spacerock.md  spice.md  time.md  transforms.md
docs/rust-docs/: errors.md  referenceplane.md  spice.md  time.md  transforms.md
notebooks/: dev.ipynb  index.md  mercury-precession.ipynb  messing_around.ipynb  nbody.ipynb  observing.ipynb  orbit-fitting.ipynb  playing_around.ipynb  rockcollection.ipynb  spice.ipynb  stumpff.ipynb  time.ipynb  transforms.ipynb
notebooks/examples/: example-001.ipynb  example-002.ipynb  example-003.ipynb  example-004.ipynb  nea_close_approaches.ipynb
notebooks/primer/: primer-000.ipynb  primer-001.ipynb  primer-002.ipynb  primer-003.ipynb  primer-004.ipynb  primer-005.ipynb  primer-006.ipynb  primer-009.ipynb
notebooks/tutorial/: index.md  origin.ipynb  problem-001.ipynb  problem-002.ipynb  solstice.ipynb
py-spacerocks/: cargo.toml
py-spacerocks/src/: lib.rs  spacerock.rs
py_spacerocks/: Cargo.toml  pyproject.toml
py_spacerocks/src/: lib.rs  mpc.rs  orbit_type.rs  rockcollection.rs  spacerock.rs
py_spacerocks/src/py_coordinates/: mod.rs
py_spacerocks/src/py_nbody/: force.rs  integrator.rs  mod.rs  simulation.rs
py_spacerocks/src/py_observing/: observation.rs  observer.rs
py_spacerocks/src/py_orbfit/: gauss.rs  mod.rs
py_spacerocks/src/py_spice/: spicekernel.rs
py_spacerocks/src/py_time/: mod.rs  time.rs
py_spacerocks/src/py_transforms/: calc_conic_anomaly_from_true_anomaly.rs  mod.rs  stumpff.rs  universal_kepler_solver.rs
reserved-src-donotdelete/: mod.rs
reserved-src-donotdelete/nbody/: simulation.rs
reserved-src-donotdelete/py-spacerocks/: warnings.txt
reserved-src-donotdelete/py_nbody/: integrator.rs  simulation.rs
src/: error.rs  keplerorbit.rs  lib.rs  main.rs  orbit_type.rs  properties.rs  spacerock.rs  utils.rs
src/constants/: observatories.rs
src/coordinates/: mod.rs  origin.rs  reference_plane.rs
src/data/: constants.rs
src/errors/: mod.rs  orbit_error.rs  origin_error.rs  reference_plane_error.rs  (+2 more)
tests/: spice_tests.rs  time_tests.rs  transforms_tests.rs
(+76 files in other folders)
