[package]
name = "py_spacerocks"
version = "3.0.0-alpha.0"
edition = "2021"

[lib]
name = "spacerocks"
crate-type = ["cdylib"]

[dependencies]
spacerocks = { path = "../" }
# pyo3 = { version = "0.23.3", features = ["extension-module"] }
pyo3 = { version = "*", features = ["extension-module"] }

numpy = "*"
rayon = "*"
nalgebra = "0.32.2"
