[package]
name = "py_spacerocks"
version = "3.0.0-alpha.0"
edition = "2021"

[lib]
name = "spacerocks"
crate-type = ["cdylib"]

[dependencies]
spacerocks = { path = "../" }
# pyo3 = { version = "0.23.3", features = ["extension-module"] }
pyo3 = { version = "*", features = ["extension-module"] }

numpy = "*"
rayon = "*"
nalgebra = "0.32.2"

arrow = "40.0" 
flate2 = "1.0"
serde_json = "1.0.68"
serde = { version = "1.0.197", features = ["derive", "rc"]}
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
anyhow = "*"
dirs = "*"
